# programming-4

./: .gitignore  CMakeLists.txt  Lua.sln  Lua.vcxproj  Lua.vcxproj.filters  Minigin.sln  README.md  TrashTheCache.cpp  TrashTheCache.sln  TrashTheCache.vcxproj  TrashTheCache.vcxproj.filters  imgui.props
Calculate/: Calculate.cpp  Calculate.sln  Calculate.vcxproj  Calculate.vcxproj.filters
Calculate_Part2/: Calculate_Part2.sln  Calculate_Part2.vcxproj  main.cpp
Data/: ghost.tga  pacman.tga  scoreboard.txt
Data/config/: resource_config.json
Minigin/: BaseComponent.h  FPSComponent.cpp  FPSComponent.h  Font.cpp  Font.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  Minigin.vcxproj  Minigin.vcxproj.filters  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Singleton.h  TextComponent.cpp  TextComponent.h  TextObject.cpp  TextObject.h  Texture2D.cpp  Texture2D.h  TextureComponent.cpp  Time.cpp  Time.h  Timer.h  Transform.cpp  Transform.h  main.cpp
NPC/: NPC.h  NPC.vcxproj  NPC.vcxproj.filters  main.cpp  main.lua  startup.lub
Props/: glm.props  include_dirs.props  minigin.props  nlohmann.props  post_build.props  sdl.props  steam.props  steam_x64.props  steam_x86.props  xinput.props
Qbert/: Qbert.vcxproj  Qbert.vcxproj.filters  main.cpp
allocators/: FixedSizeAllocator.cpp  FixedSizeAllocator.h  MemoryAllocator.h  MemoryOverrides.cpp  MemoryOverrides.h  SingleLinkAllocator.cpp  SingleLinkAllocator.h  StackAllocator.cpp  StackAllocator.h
tests/: FixedSizeAllocatorTest.cpp  SingleLinkAllocatorTest.cpp  StackAllocatorTest.cpp
(+581 files in other folders)
